fix weight btn on mobile

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -60,7 +60,6 @@
   align-items: center;
   text-align: center;
 
-  max-width: 295px;
   width: 100%;
   padding: 16px;
   cursor: pointer;
